objects/CN_City__c.object
<CustomObject>
    <fields>
        <fullName>CN_City_CN__c</fullName>
        <label>City(CN)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_City_Code__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>City Code</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CN_City_EN_Code__c</fullName>
        <label>City EN Code</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_City_EN__c</fullName>
        <label>City(EN)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Province_Name_CN__c</fullName>
        <label>Province Name CN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Province_Name_EN__c</fullName>
        <label>Province Name EN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Province__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Province</label>
        <referenceTo>CN_Province__c</referenceTo>
        <relationshipLabel>Citys (Province)</relationshipLabel>
        <relationshipName>Citys1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_Sales_Office__c</fullName>
        <label>Sales Office</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>K010</fullName>
                    <label>K010-ShangHai</label>
                </value>
                <value>
                    <fullName>K020</fullName>
                    <label>K020-BeiJing</label>
                </value>
                <value>
                    <fullName>K030</fullName>
                    <label>K030-ShenZhen</label>
                </value>
                <value>
                    <fullName>K040</fullName>
                    <label>K040-GuangZhou</label>
                </value>
                <value>
                    <fullName>K050</fullName>
                    <label>K050-ChengDu</label>
                </value>
                <value>
                    <fullName>K060</fullName>
                    <label>K060-DaLian</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>City</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>City Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Citys</pluralLabel>
    <recordTypes>
        <fullName>CN_City</fullName>
        <active>true</active>
        <label>CN City</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>